+anki amaltus.com [ru-kbd text + kbd audio] 2.6K

--- a/data/text/pile/.gitignore
+++ b/data/text/pile/.gitignore
@@ -2,3 +2,4 @@
 /turk-kbd_dictionary.pdf
 /wip_kbd-ru_amaltus_dict.tsv
 /kbd_ADIGE X,UEX,U-SELAMXER_Kumysheva L.Z..txt
+/kabardinski-razgovornik-anki_amaltus.com (sqlite-aac).zip
