~cleaning wip files

--- a/data/text/pile/.gitignore
+++ b/data/text/pile/.gitignore
@@ -3,3 +3,5 @@
 /wip_kbd-ru_amaltus_dict.tsv
 /kbd_ADIGE X,UEX,U-SELAMXER_Kumysheva L.Z..txt
 /kabardinski-razgovornik-anki_amaltus.com (sqlite-aac).zip
+/amaltus_cleaning.py
+/wip_kbd-ru_amaltus_dict_.tsv
